Made changes to the file and added all the personal info.

--- a/index.html
+++ b/index.html
@@ -82,48 +82,85 @@
                 <p class="contact">
                     Email:
                     <a href="mailto:yourname@example.com"
-                        >yourname@example.com</a
+                        >meakashthapa@gmail.com</a
                     >
                     | Phone: (123) 456-7890 | LinkedIn:
-                    <a href="#">linkedin.com/in/yourname</a>
+                    <a href="#">linkedin.com/in/akashthapa</a>
                 </p>
             </section>
+
             <section class="section">
                 <h2>Summary</h2>
                 <p>
-                    A brief summary about yourself, your skills, and what you
-                    bring to the table. Keep it concise and impactful.
+                    Motivated IT Professional with 6+ years of experience in implementing and managing
+                    complex technology solutions. Proficient in network infrastructure design, systems
+                    administration, and cybersecurity best practices. Adept at troubleshooting technical issues,
+                    providing user support, and improving IT operations to enhance business performance.
                 </p>
             </section>
+
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
-                    <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
-                    </p>
+                    <h3>Cybersecurity Analyst - Infosys</h3>
+                    <p>January 2021 - July 2023</p>
+                    <uo>
+                        <li>
+                            Monitored potential security threats, created security logs on unauthorized access attempts and potential breaches for multiple clients.
+                        </li>
+                        <li>
+                            Managed response, triage, and escalation of cybersecurity incidents related to user access,
+                            security breaches, and user privacy.
+                        </li>
+                        <li>
+                            Conducted security audits on IT infrastructure and policies, including firewalls, access
+                            management, user authentication, and risk mitigation.
+                        </li>
+                        <li>
+                            Attended meetings with the cybersecurity team to discuss potential security threats and
+                            identify opportunities to enhance information security measures.
+                        </li>
+                        <li>
+                            Worked with SIEM and SOAR platforms to create and execute automation playbooks.
+                        </li>
+                    </uo>
                 </div>
+
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
-                    <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
-                    </p>
+                    <h3>Back Office Systems Admin - CS Management</h3>
+                    <p>August 2017 - April 202</p>
+                    <uo>
+                        <li>
+                            Configure, install, and support PCs, laptops, POS Devices, routers, firewalls, and LAN
+                            switches.
+                        </li>
+                        <li>
+                            Conducted troubleshooting processes and diagnosed issues related to hardware, software,
+                            networks, and POS devices.
+                        </li>
+                        <li>
+                            Coordinated and collaborated with cross-functional teams to execute various projects to
+                            identify solutions to roadblocks and mitigate impact to IT systems
+                        </li>
+                        <li>
+                            Troubleshot computer systems and hardware to support daily IT operations, which
+                            included debugging and testing new software.
+                        </li>
+                        <li>
+                            Established MDM system and anti-virus software to increase efficiency by up to 35%.
+                        </li>
+                    </uo>
                 </div>
+
             </section>
+
             <div class="section">
                 <h2>Education</h2>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>Bachelors - University of Scranton</h3>
+                    <p>May 2020</p>
                 </div>
-                <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
-                </div>
+
             </section>
             <section class="section">
                 <h2>Skills</h2>
@@ -131,7 +168,7 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JavaScript</li>
+                        <li>Java</li>
                         <li>Python</li>
                         <li>Team Leadership</li>
                     </ul>
@@ -140,17 +177,15 @@
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>correct-the-HTML</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Used knowledge of HTML to correctly make changes to html index file with correct semantic tags.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>meakashthapa.github.io</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Used Github, HTML and CSS to create a resume webpage hosted on Github.
                     </p>
                 </div>
             </section>
